Products.CMFTopic Changelog
===========================

2.3.0 (unreleased)
------------------


2.3.0-beta (2012-03-21)
-----------------------

- Made sure converted tools are used as utilities.

- Correct test assertion about the value of DateCriteria. It's edit method
  mandates the value to be of type int, so we should respect that in tests.

- Require at least Zope 2.13.12.


2.2.1 (2010-07-04)
------------------

- Deal with deprecation warnings for Zope 2.13.


2.2.0 (2010-01-04)
------------------

- no changes from version 2.2.0-beta


2.2.0-beta (2009-12-06)
-----------------------

- no changes from version 2.2.0-alpha


2.2.0-alpha (2009-11-13)
------------------------

- Got rid of redundant icon related type info properties.
  (https://bugs.launchpad.net/zope-cmf/+bug/397795)

- moved the Zope dependency to version 2.12.0b3dev

- Cleaned up / normalized imports:

  o Don't import from Globals;  instead, use real locations.

  o Make other imports use the actual source module, rather than an
    intermediate (e.g., prefer importing 'ClassSecurityInfo' from
    'AccessControl.SecurityInfo' rather than from 'AccessControl').

  o Avoid relative imports, which will break in later versions of Python.

- profiles: Added an add view expression to the Topic content type definition.

- Topic GenericSetup definition: Add an icon URL expression to the Topic
  content type definition.

- ZMI: Prevent users from creating content through the ZMI by hiding the
  entry for "CMFTopic Content".

- unit tests: Add a functional testing layer for CMFTopic, and use it.

- Topic: 'addTopic' no longer sends add events.

- interfaces: Removed deprecated oldstyle interfaces.


2.1.2 (2008-09-13)
------------------

- no changes from 2.1.2-beta


2.1.2-beta (2008-08-26)
-----------------------

- completed devolution from monolithic CMF package into its component
  products that are distributed as eggs from PyPI.


2.1.1 (2008-01-06)
------------------

- no changes

