@@ -1,0 +1,27 @@
+##############################################################################
+#
+# Copyright (c) 2012 Zope Foundation and Contributors.
+#
+# This software is subject to the provisions of the Zope Public License,
+# Version 2.1 (ZPL).  A copy of the ZPL should accompany this distribution.
+# THIS SOFTWARE IS PROVIDED "AS IS" AND ANY AND ALL EXPRESS OR IMPLIED
+# WARRANTIES ARE DISCLAIMED, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
+# WARRANTIES OF TITLE, MERCHANTABILITY, AGAINST INFRINGEMENT, AND FITNESS
+# FOR A PARTICULAR PURPOSE.
+#
+##############################################################################
+"""Unit tests for browser module.
+"""
+
+import unittest
+from Testing import ZopeTestCase
+
+from Products.CMFTopic.testing import FunctionalLayer
+
+
+def test_suite():
+    suite = unittest.TestSuite()
+    s = ZopeTestCase.FunctionalDocFileSuite('topic.txt')
+    s.layer = FunctionalLayer
+    suite.addTest(s)
+    return suite
