@@ -1,0 +1,43 @@
+<html metal:use-macro="context/@@standard_macros/page">
+<head>
+
+<metal:slot fill-slot="style_slot">
+<tal:span tal:replace="structure context/getBaseTag" />
+</metal:slot>
+
+</head>
+<body>
+
+<metal:slot metal:fill-slot="body" i18n:domain="cmf_default"
+><h1 id="DesktopTitle" tal:content="view/title">TOPIC TITLE</h1>
+
+<p id="DesktopDescription" tal:condition="view/description|nothing"
+   tal:content="view/description">DESCRIPTION OF THE TOPIC.</p>
+
+<tal:case tal:condition="view/listSubtopicInfos"
+><h4 i18n:translate="">Subtopics:</h4>
+ <div tal:repeat="item_info view/listSubtopicInfos">
+   <a href="" tal:attributes="href item_info/url"
+      tal:content="item_info/title">Topic Title</a>
+ </div
+></tal:case>
+
+<h4 i18n:translate="">Topic Matches:</h4>
+<div tal:repeat="item_info view/listBatchItems">
+ <a href="" tal:attributes="href item_info/url"
+ ><tal:span tal:content="item_info/id">ID</tal:span>
+  <tal:case tal:condition="item_info/title"
+     tal:content="item_info/title">(Title)</tal:case></a>
+</div>
+
+<metal:macro metal:use-macro="context/@@batch_widget/navigation" />
+
+<h4 i18n:translate="">Query Parameters:</h4>
+
+<ul tal:condition="view/listQueries">
+ <li tal:repeat="item view/listQueries" tal:content="item">item</li>
+</ul>
+</metal:slot>
+
+</body>
+</html>
